kubernetes/network-policies/allow-monitoring.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-monitoring
  namespace: devsecops
spec:
  podSelector:
    matchLabels:
      app: devsecops-platform
  policyTypes:
    - Ingress

  ingress:
    # Allow Prometheus to scrape application metrics
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: monitoring
          podSelector:
            matchLabels:
              app.kubernetes.io/name: prometheus
      ports:
        - protocol: TCP
          port: 8080
